--- a/index.html
+++ b/index.html
@@ -271,33 +271,62 @@
         <h1>実現可能です</h1>
         <p class="t10w-sentence1">その証拠に第三者の声を聞いてみました。</p>
         <p>＊実際にフリーランスエンジニアを採用する企業様から、メッセージをいだだきました。</p>
-        <div class="t10w-item">
-            <img src="img/take.jpg" alt="">
-            <p class="t10w-sentence2">
-                リモートワークという言葉がありますが、弊社では何も気にしません。
-                エンジニアに求めるのは、快適なコミュニケーションと信頼と成果物のみ。
-            </p>
-            <p><span>Kredo IT Abroad.Inc</span> 代表取締役 横田 猛夫</p>
-        </div>
-        <div class="t10w-item">
-            <img src="img/minami_sato.jpg" alt="">
-            <p class="t10w-sentence2">
-                社内でスキルのある人材を採用するのは難しい。
-                外部パートナーとして継続的に依頼できるフリーランスには助かっています。
-            </p>
-            <p><span>SAPEUR.Inc</span> 代表取締役 佐藤 陽</p>
-        </div>
-        <div class="t10w-item">
-            <img src="img/asada.jpg" alt="">
-            <p class="t10w-sentence2">
-                プログラマーが足りていないときに外部リソースとして、フリーランスに発注しています。
-                今はどこの会社でもエンジニアが不足していますね。
-            </p>
-            <p>株式会社<span>BeautifulWorks</span> 代表取締役 浅田 百合</p>
-        </div>
-
+        <div class="t10w-container">
+            <div class="t10w-item clearfix">
+                <img src="img/take.jpg" alt="">
+                <p class="t10w-sentence2">
+                    <br>リモートワークという言葉がありますが、弊社では何も気にしません。
+                    エンジニアに求めるのは、快適なコミュニケーションと信頼と成果物のみ。
+                </p>
+                <p class="t10w-sentence3"><span>Kredo IT Abroad.Inc</span> 代表取締役 横田 猛夫</p>
+            </div>
+            <div class="t10w-item clearfix">
+                <img src="img/minami_sato.jpg" alt="">
+                <p class="t10w-sentence2">
+                    <br>社内でスキルのある人材を採用するのは難しい。
+                    外部パートナーとして継続的に依頼できるフリーランスには助かっています。
+                </p>
+                <p class="t10w-sentence3"><span>SAPEUR.Inc</span> 代表取締役 佐藤 陽</p>
+            </div>
+            <div class="t10w-item clearfix">
+                <img src="img/asada.jpg" alt="">
+                <p class="t10w-sentence2">
+                    <br>プログラマーが足りていないときに外部リソースとして、フリーランスに発注しています。
+                    今はどこの会社でもエンジニアが不足していますね。
+                </p>
+                <p class="t10w-sentence3">株式会社<span>BeautifulWorks</span> 代表取締役 浅田 百合</p>
+            </div>
         </div>
     </div>
+
+    <div class="eleventh-wrapper">
+        <h1>iSara[イサラ]で学べる内容</h1>
+        <p>渡航前の事前課題と渡航中に学べることの一覧です。</p>
+        <ul>
+            <li class="e11w-header">渡航前の事前課題</li>
+            <li class="e11w-sentence">0から始めるプログラミング事前学習講座</li>
+            <li class="e11w-sentence">参加者グループコミュニティ</li>
+            <li class="e11w-sentence">チャットサポート</li>
+            <li class="e11w-sentence">事前スカイプコンサル</li>
+            <li class="e11w-sentence">環境構築の事前学習</li>
+            <li class="e11w-sentence">jQueryの事前学習講座</li>
+            <li class="e11w-sentence">Bootstrapの事前講座</li>
+            <li class="e11w-sentence">PHP / Mysqlの事前講座</li>
+            <li class="e11w-sentence">稼ぐためのHTML / CSS講座</li>
+            <li class="e11w-sentence">WordPressの事前学習講座</li>
+        </ul>
+
+        <ul>
+            <li class="e11w-header">バンコク渡航中</li>
+            <li class="e11w-sentence">フリーランス独立術講座</li>
+            <li class="e11w-sentence">実際の実務案件をこなす</li>
+            <li class="e11w-sentence">ノマドフリーランス体験</li>
+            <li class="e11w-sentence">バンコク生活体験</li>
+            <li class="e11w-sentence">クラウドソーシング活用講座</li>
+            <li class="e11w-sentence">フリーランスの為の営業講座</li>
+        </ul>
+    </div>
+
 
   </body>
 </html>
