--- a/index.html
+++ b/index.html
@@ -302,29 +302,137 @@
     <div class="eleventh-wrapper">
         <h1>iSara[イサラ]で学べる内容</h1>
         <p>渡航前の事前課題と渡航中に学べることの一覧です。</p>
-        <ul>
-            <li class="e11w-header">渡航前の事前課題</li>
-            <li class="e11w-sentence">0から始めるプログラミング事前学習講座</li>
-            <li class="e11w-sentence">参加者グループコミュニティ</li>
-            <li class="e11w-sentence">チャットサポート</li>
-            <li class="e11w-sentence">事前スカイプコンサル</li>
-            <li class="e11w-sentence">環境構築の事前学習</li>
-            <li class="e11w-sentence">jQueryの事前学習講座</li>
-            <li class="e11w-sentence">Bootstrapの事前講座</li>
-            <li class="e11w-sentence">PHP / Mysqlの事前講座</li>
-            <li class="e11w-sentence">稼ぐためのHTML / CSS講座</li>
-            <li class="e11w-sentence">WordPressの事前学習講座</li>
-        </ul>
+        <div class="e11w-list">
+            <ul>
+                <li class="e11w-header">渡航前の事前課題</li>
+                <li class="e11w-sentence">0から始めるプログラミング事前学習講座</li>
+                <li class="e11w-sentence">参加者グループコミュニティ</li>
+                <li class="e11w-sentence">チャットサポート</li>
+                <li class="e11w-sentence">事前スカイプコンサル</li>
+                <li class="e11w-sentence">環境構築の事前学習</li>
+                <li class="e11w-sentence">jQueryの事前学習講座</li>
+                <li class="e11w-sentence">Bootstrapの事前講座</li>
+                <li class="e11w-sentence">PHP / Mysqlの事前講座</li>
+                <li class="e11w-sentence">稼ぐためのHTML / CSS講座</li>
+                <li class="e11w-sentence">WordPressの事前学習講座</li>
+            </ul>
 
-        <ul>
-            <li class="e11w-header">バンコク渡航中</li>
-            <li class="e11w-sentence">フリーランス独立術講座</li>
-            <li class="e11w-sentence">実際の実務案件をこなす</li>
-            <li class="e11w-sentence">ノマドフリーランス体験</li>
-            <li class="e11w-sentence">バンコク生活体験</li>
-            <li class="e11w-sentence">クラウドソーシング活用講座</li>
-            <li class="e11w-sentence">フリーランスの為の営業講座</li>
-        </ul>
+            <ul>
+                <li class="e11w-header">バンコク渡航中</li>
+                <li class="e11w-sentence">フリーランス独立術講座</li>
+                <li class="e11w-sentence">実際の実務案件をこなす</li>
+                <li class="e11w-sentence">ノマドフリーランス体験</li>
+                <li class="e11w-sentence">バンコク生活体験</li>
+                <li class="e11w-sentence">クラウドソーシング活用講座</li>
+                <li class="e11w-sentence">フリーランスの為の営業講座</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="twelveth-wrapper">
+        <h1>
+            講座費用２５８，０００円以上の金額が稼げるまで「永久サポート延長」します。<br>
+            つまりリスク０で参加できます。
+        </h1>
+    </div>
+
+    <div class="thirteen-wrapper">
+        <h1><i class="fas fa-laptop"></i>受講の流れ</h1>
+        <img src="img/flow.jpg" alt="">
+        <div class="t13w-flow">
+            <div class="t13w-item">
+                <div class="t13w-left">
+                    <img src="img/skypeconsulting.png" alt="">
+                    <p>Skypeで<br>事前コンサル</p>
+                </div>
+                <div class="t13w-right">
+                    <p class="t13w-right-header">現在のスキルの状況、パソコンの環境説明、渡航での注意点を話します。</p>
+                    <p class="t13w-right-header">簡単なテストあり</p>
+                    <p>
+                        iSaraでは受講長を稼げることを保証しています。従って、事前コンサル時点で簡単なテストを実施し、
+                        場合によってはお断りをしております。（テストの内容はＰＣの基礎知識に関するテストですので、
+                        普段からパソコンを利用する方でしたら問題ありません。テストはもちろん無料ですので、まずはお問い合わせください。）
+                    </p>
+                </div>
+            </div>
+            <div class="t13w-connect1"></div>
+            <div class="t13w-connect2"></div>
+            <div class="t13w-item">
+                <div class="t13w-left">
+                    <img src="img/preworks.png" alt="">
+                    <p>事前課題の提出</p>
+                </div>
+                <div class="t13w-right">
+                    <p class="t13w-right-header">出発前の１ヶ月前に事前課題を送ります。</p>
+                    <p>
+                        0から始めるプログラミング事前学習講座、環境構築の事前学習、jQueryの事前学習講座、Bootstrapの事前学習講座、
+                        PHP / Mysqlの事前講座
+                    </p>
+                    <p class="t13w-right-header">
+                        課題は多いですが、ここで努力が必須です。プログラミングは高付加価値なスキルです。そのためには学習が必須です。
+                        回数無制限のチャットサポート付きですので、最初は努力してください。
+                        また、参加者グループコミュニティも作成するので、横のつながりでモチベーションを高めることもできます。
+                    </p>
+                </div>
+            </div>
+            <div class="t13w-connect2"></div>
+            <div class="t13w-connect3"></div>
+            <div class="t13w-item">
+                <div class="t13w-left">
+                    <img src="img/flight.png" alt="">
+                    <p>現地に渡航</p>
+                </div>
+                <div class="t13w-right">
+                    <p class="t13w-right-header">
+                        到着日には空港でお出迎えし、初日のオリエンテーションを行います。
+                        滞在先は空港からすぐの出来立てシェアハウス。おいしいタイ料理などもご紹介します。
+                    </p>
+                    <p class="t13w-right-header">
+                        iSaraは『ノマド』フリーランス養成講座です。楽しいノマド体験ができるよう、
+                        バンコクでの生活はこちらでサポートします。
+                    </p>
+                </div>
+            </div>
+            <div class="t13w-connect1"></div>
+            <div class="t13w-connect2"></div>
+            <div class="t13w-item">
+                <div class="t13w-left">
+                    <img src="img/personwithlight.png" alt="">
+                    <p>実案件を<br>通して学ぶ</p>
+                </div>
+                <div class="t13w-right">
+                    <p class="t13w-right-header">
+                        現役フリーランスが抱える案件に加え、クラウドソーシングを使って実案件をこなします。
+                    </p>
+                    <p class="t13w-right-header">
+                        案件獲得のためにメールの書き方や見積もりの仕方など、
+                        他のプログラミングスクールでは教えてくれない実務スキルを学ぶことができます。
+                    </p>
+                    <p>
+                        ＊現役フリーランスがサポートします。
+                    </p>
+                </div>
+            </div>
+            <div class="t13w-connect2"></div>
+            <div class="t13w-connect3"></div>
+            <div class="t13w-item">
+                <div class="t13w-left">
+                    <img src="img/jobsupport.png" alt="">
+                    <p>帰国後の仕事獲得<br />サポート付き</p>
+                </div>
+                <div class="t13w-right">
+                    <p class="t13w-right-header">
+                        経験年数の少ないフリーランスが高単価で継続的に仕事受注するコツ、それがチームを組むことです。
+                    </p>
+                    <p class="t13w-right-header">iSaraではフリーランスコミュニティを形成し、帰国後のエンジニアでも継続的に稼げる仕組みを提供します。</p>
+                    <p class="t13w-right-header">
+                        もちろん、個人で十分に稼げるようになった場合はいつでも脱退できますし、制限などは何もありません。
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
 
