--- a/index.html
+++ b/index.html
@@ -430,7 +430,52 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </div>
 
+    <div class="fourteenth-wrapper">
+        <div class="f14w-container">
+
+
+        <h1>なぜバンコクなのか？</h1>
+        <p class="f14w-sentence1">
+            ここまで見ると、iSaraは日本でも実現可能に見えます。<br />
+            しかし、バンコクを選んだのには理由があります。
+        </p>
+        <ul>
+            <li>プログラミングフリーランスの最先端</li>
+            <li>水準は日本と同じなのに、生活費が安い（毎月８万円ほど）</li>
+            <li>昼、夜ともに遊びが充実（稼ぐモチベーションアップと息抜きにＧＯＯＤ）</li>
+            <li>日本人が住みやすい（食事がおいしい／機構が良い／親日である）</li>
+        </ul>
+        <p class="f14w-sentence2">環境が大切。さらにこの価格で実現できるのが、バンコクなのです。</p>
+        </div>
+    </div>
+
+    <div class="fifteenth-wrapper">
+        <h1>iSara受講生への参加特典</h1>
+        <p class="f15w-sentence0"><span>講座費用２５８,０００円以上の金額が稼げるまでの「永久サポート延長」</span>を追加します。つまり、<span>実質０円</span>です。</p>
+
+        <div class="f15w-contents">
+            <h2>iSaraは『実質０円』！さらなる追加特典もあります。</h1>
+            <div class="f15w-item">
+                <h3>特典１</h3>
+                <p class="f15w-sentence">
+                    講座費用２５８，０００円以上の金額が稼げるまで、「永久サポート延長」。リスク０で参加できます。
+                </p>
+            </div>
+            <div class="f15w-item">
+                <h3>特典２</h3>
+                <p class="f15w-sentence">
+                    iSaraフリーランスコミュニティ参加権利。案件の紹介や、新施設ＯＰＥＮの際の優先利用券が受けられます。
+                </p>
+            </div>
+            <div class="f15w-item">
+                <h3>特典３</h3>
+                <p class="f15w-sentence">
+                    講座参加後のシェアハウス利用権利（ドンムアン空港資金のため、とても便利です）
+                </p>
+            </div>
         </div>
 
     </div>
