--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>iSara_copy</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <script type="text/javascript" src="js/jQuery-3.4.1.min.js"></script>
   </head>
   <body>
 
@@ -453,9 +454,10 @@
     </div>
 
     <div class="fifteenth-wrapper">
-        <h1>iSara受講生への参加特典</h1>
-        <p class="f15w-sentence0"><span>講座費用２５８,０００円以上の金額が稼げるまでの「永久サポート延長」</span>を追加します。つまり、<span>実質０円</span>です。</p>
-
+        <h1><i class="fas fa-gift"></i>iSara受講生への参加特典</h1>
+        <p class="f15w-sentence0">
+            <span>講座費用２５８,０００円以上の金額が稼げるまでの「永久サポート延長」</span>を追加します。つまり、<span>実質０円</span>です。
+        </p>
         <div class="f15w-contents">
             <h2>iSaraは『実質０円』！さらなる追加特典もあります。</h1>
             <div class="f15w-item">
@@ -476,6 +478,92 @@
                     講座参加後のシェアハウス利用権利（ドンムアン空港資金のため、とても便利です）
                 </p>
             </div>
+        </div>
+    </div>
+
+    <div class="sixteenth-wrapper">
+        <h1>iSaraはボランティアではありません。</h1>
+        <p>
+            ここまでみると、実質０円で各種サポートもある、特典が多すぎて逆に怪しい。<br />
+            そう思われるかもしれません。<br />
+            しかし、iSaraが目指すことは異なります。
+        </p>
+
+        <div class="s16w-title">
+            <h1>月１０万円稼げるエンジニアを排出し続ける。</h2>
+        </div>
+        <p>
+            最大の価値がこれです。<br />
+            iSaraの卒業生が稼ぎ続けることで、小さな経済が動き始めます。<br />
+            ここに最大の価値があり、この講座はその序章にすぎません。
+        </p>
+    </div>
+
+    <div class="seventeenth-wrapper">
+        <h1>創業者からのメッセージ</h1>
+        <h2>「一生モノのスキル」を身に付け、ノマドライフを楽しもう！</h2>
+        <div class="s17w-container">
+            <div class="s17w-left">
+                <img src="img/IMG_1139-768x576.jpg" alt="">
+            </div>
+            <div class="s17w-right">
+                <p>初めまして。「iSara（イサラ）」創業者の染谷佳佑と申します。</p>
+                <p>
+                    iSaraの開講は、ぼくたち講師陣にとってもとても大きな挑戦です。今回、参加者に圧倒的な価値提供するために、
+                    超少人数制だからできる内容を用意しました。
+                </p>
+                <ul>
+                    <li>「Ｗｅｂエンジニアとして稼ぐ」に特化した超実践的カリキュラム</li>
+                    <li>フリーランスとして生計を立て、いつでも世界中を旅できるスキル、収入のある講師陣のみを厳選</li>
+                    <li>講座参加者が２５万８，０００円の参加費以上を稼ぐまでの無制限サポート延長</li>
+                </ul>
+                <p>
+                    ここまでのカリキュラムを備えた講座は、世界で唯一iSaraだけでしょう。
+                    iSaraでプログラミングや営業を学ぶことで、「一生ものの潰しが聞くスキル」が身に付きます。
+                    もちろん勉強だけでなく、バンコクを楽しめるプログラムも用意しています！
+                </p>
+                <p>３か月間徹底的にサポートします。ぜひバンコクでお会いしましょう。</p>
+            </div>
+        </div>
+
+        <div class="eighteenth-wrapper">
+            <h1><i class="far fa-file-alt"></i>資料請求フォーム</h1>
+            <p>まずは無料で資料請求からどうぞ</p>
+            <form class="" action="#" method="post">
+                <div class="s18w-input-form">
+                    <input class="s18w-form" type="text" name="family-name" value="" placeholder="姓"><br />
+                    <input class="s18w-form" type="text" name="first-name" value="" placeholder="名"><br />
+                    <input class="s18w-form" type="text" name="mail" value="" placeholder="メールアドレス"><br />
+                    <textarea name="question" rows="5" cols="20" placeholder="質問などはこちら（空欄でもＯＫです）"></textarea><br />
+                    <input class="s18w-submit" type="submit" name="" value="送信">
+                </div>
+            </form>
+        </div>
+
+        <div class="nineteen-wrapper">
+            <h1>よくある質問</h1>
+            <ul class="n19w-menu">
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        プログラミングスキルは必要ですか？
+                    </a>
+                    <p class="n19w-submenu-item">
+                        いいえ、必要ありません。しかし、iSaraでは参加費以上の金額が稼げることを保証しています。
+                        従って、事前通話面接時点で簡単なテストを実施し、場合によってはお断りをしております。
+                        この点だけはご了承ください。
+                    </p>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        参加費以上に稼げなかったらどうなりますか？
+                    </a>
+                    <p class="n19w-submenu-item">
+                        参加費である２５８，０００円以上の金額をトータルで稼ぐまで、無期限でサポート延長いたします。
+                        （講座参加時、週３０時間以上の実践をすることと、週１回の実践報告をすることが延長条件です。）
+                        きちんと学び実践すれば、フリーランスでも収入を作ることは十分に可能です。
+                    </p>
+                </li>
+            </ul>
         </div>
 
     </div>
