accordion menu update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <script type="text/javascript" src="js/jQuery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/javascript.js"></script>
   </head>
   <body>
 
@@ -547,21 +548,25 @@
                     <a class="n19w-menu-item-link js-menu-item-link" href="#">
                         プログラミングスキルは必要ですか？
                     </a>
-                    <p class="n19w-submenu-item">
-                        いいえ、必要ありません。しかし、iSaraでは参加費以上の金額が稼げることを保証しています。
-                        従って、事前通話面接時点で簡単なテストを実施し、場合によってはお断りをしております。
-                        この点だけはご了承ください。
-                    </p>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            いいえ、必要ありません。しかし、iSaraでは参加費以上の金額が稼げることを保証しています。
+                            従って、事前通話面接時点で簡単なテストを実施し、場合によってはお断りをしております。
+                            この点だけはご了承ください。
+                        </p>
+                    </div>
                 </li>
                 <li class="n19w-menu-item">
                     <a class="n19w-menu-item-link js-menu-item-link" href="#">
                         参加費以上に稼げなかったらどうなりますか？
                     </a>
-                    <p class="n19w-submenu-item">
-                        参加費である２５８，０００円以上の金額をトータルで稼ぐまで、無期限でサポート延長いたします。
-                        （講座参加時、週３０時間以上の実践をすることと、週１回の実践報告をすることが延長条件です。）
-                        きちんと学び実践すれば、フリーランスでも収入を作ることは十分に可能です。
-                    </p>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            参加費である２５８，０００円以上の金額をトータルで稼ぐまで、無期限でサポート延長いたします。
+                            （講座参加時、週３０時間以上の実践をすることと、週１回の実践報告をすることが延長条件です。）
+                            きちんと学び実践すれば、フリーランスでも収入を作ることは十分に可能です。
+                        </p>
+                    </div>
                 </li>
             </ul>
         </div>
