--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
             <ul class="n19w-menu">
                 <li class="n19w-menu-item">
                     <a class="n19w-menu-item-link js-menu-item-link" href="#">
-                        プログラミングスキルは必要ですか？
+                        <i class="far fa-question-circle"></i>プログラミングスキルは必要ですか？
                     </a>
                     <div class="n19w-submenu">
                         <p class="n19w-submenu-item">
@@ -558,13 +558,143 @@
                 </li>
                 <li class="n19w-menu-item">
                     <a class="n19w-menu-item-link js-menu-item-link" href="#">
-                        参加費以上に稼げなかったらどうなりますか？
+                        <i class="far fa-question-circle"></i>参加費以上に稼げなかったらどうなりますか？
                     </a>
                     <div class="n19w-submenu">
                         <p class="n19w-submenu-item">
                             参加費である２５８，０００円以上の金額をトータルで稼ぐまで、無期限でサポート延長いたします。
                             （講座参加時、週３０時間以上の実践をすることと、週１回の実践報告をすることが延長条件です。）
                             きちんと学び実践すれば、フリーランスでも収入を作ることは十分に可能です。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>滞在中の宿泊先はどうなりますか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            宿泊費用が必要ですが、iSara提携のホステルに宿泊することになりますので心配はありません。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>滞在中の食事はどうなりますか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            拠点となる新築シェアハウスの周辺に、５０バーツ程度の（１６０円）安価な飲食店が多数あります。
+                            日本食レストランもありますし、出前を取ることも可能です。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>就職、転職はできますか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            ＤＯＤＡの調査によると、２０１７年のエンジニアの求人倍率は７．５倍です。
+                            これは、人材不足が叫ばれる医療業界（医師：６倍、看護師：３倍）よりも高い数値です。
+                            ですのできちんとしたスキルを身に付けることができれば、就職・転職には困らないはずです。
+                            元リクルートの転職のプロも運営スタッフとして参加しています。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>フリーランスにならなければならないのですか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            いいえ、必ずフリーランスにならないといけないわけではありません。
+                            実勢に過去の卒業生の方の進路も、独立、副業をして続ける、就職するなど様々です。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>ノマドワーカー的に世界を旅しながら働きたいです。可能ですか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            きちんと努力し、スキルを身に付けることができれば可能です。
+                            iSaraは、「好きなときに働き、好きな時に遊ぶ」という人生を送れる人を増やすために開校しました。
+                            ちなみに、講師は全員ノマドワーカーとして、働きながら自由に世界中を旅しています。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>学ぶプログラミング言語は何ですか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            HTML / CSS / PHPを学びます。どの言語も需要が高いです。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>将来的にwebサービス、アプリ、メディアを作りたいです。
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            経験してる講師がいますよ。大丈夫です。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>次回開催の予定はありますか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            未定です。まずはお問い合わせください。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>海外に出るのが初めてで不安です。
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            講師陣が現地での生活をサポートしますので安心してください。
+                            ただし、パスポート取得は必要です。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>タイ語、英語が一切話せません。参加可能でしょうか。
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            タイ語スタッフ、英語スタッフがいるのでOKです。
+                            日本人、タイ人スタッフがおりますので、開催中のトラブル対応の心配は必要ありません。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>治安はどうですか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            バンコクは、東南アジアや南アジアの他の国の都市部と比べると、街中も整備されており、非常に治安のいい街です。
+                            日本ほどではないですが、世界でも非常に治安のいい国として知られています。
+                        </p>
+                    </div>
+                </li>
+                <li class="n19w-menu-item">
+                    <a class="n19w-menu-item-link js-menu-item-link" href="#">
+                        <i class="far fa-question-circle"></i>パソコンは必要ですか？
+                    </a>
+                    <div class="n19w-submenu">
+                        <p class="n19w-submenu-item">
+                            はい。ノートパソコンのご用意が必要です。
                         </p>
                     </div>
                 </li>
