--- a/index.html
+++ b/index.html
@@ -702,14 +702,18 @@
             </li>
         </ul>
     </div>
-    
+
 
     <footer>
         <p>
             バンコクのノマドエンジニア育成講座、iSara[iSara]<br />
             Copyright @ <a href="#">iSara</a> All Rights Reserved.
         </p>
-        <p><a class="footer-twitter" href="#">ツイート</a><a class="footer-good" href="#">いいね！</a><a class="footer-good" href="#">シェア</a></p>
+        <p class="footer-sns-btn">
+            <a class="footer-twitter" href="#"><i class="fab fa-twitter"></i>ツイート</a>
+            <a class="footer-good" href="#"><i class="fas fa-thumbs-up"></i>いいね！</a>
+            <a class="footer-good" href="#">シェア</a>
+        </p>
         <p>Designed by <a href="#">Maya Ogi</a> / Developed by <a href="#">Kentaro Koga</a></p>
     </footer>
 
