--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   </head>
   <body>
 
-    <header>
+    <header class="header">
+        <div class="header-bk">
+
+
       <p>
         <img class="logo" src="img/isaralogo.png">
         <span class="sub_title">バンコクのノマドエンジニア育成講座</span>
         <span class="seikyu"><a href="#">お問い合わせ / 資料請求はこちら</a></span>
       </p>
+      </div>
     </header>
 
     <div class="first-wrapper">
