no needed delete

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <title>iSara_copy</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
@@ -47,9 +48,9 @@
         <p>第７期生：資料請求受付中</p>
       </div>
       <ul class="sw-list">
-        <li><a href="#"><i class="fab fa-twitter"></i>ツイート</a></li>
-        <li><a href="#"><i class="fas fa-thumbs-up"></i>いいね！</a></li>
-        <li><a href="#">シェア</a></li>
+        <li class="sw-twitter"><a href="#"><i class="fab fa-twitter"></i>ツイート</a></li>
+        <li class="sw-good"><a href="#"><i class="fas fa-thumbs-up"></i>いいね！</a></li>
+        <li class="sw-good"><a href="#">シェア</a></li>
       </ul>
     </div>
 
